# rs5x4_host

./: .gitignore  CMakeLists.txt  README.md  allinfo.txt  commands.txt  compile.txt  main.cpp  samplespotifykeys.txt  spotifykeys.txt  start.vbs  token.txt  vcpkg.json  vcpkg_rf.txt
current/: README.md  allinfo.txt  main.py  mainLinux.py  start host - Copy.bat  start host.bat  start host.txt  test.py
final/: allinfo.txt
src/: art.h  hidsend.h  main.cpp  spotifytoken.h  test.cpp
test/: allinfo.txt
